--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.gemini</groupId>
-	<artifactId>api</artifactId>
+	<artifactId>geminiapi</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>ask</name>
 	<description>asking for response gemini</description>
@@ -54,6 +54,12 @@
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.pdfbox</groupId>
+			<artifactId>pdfbox</artifactId>
+			<version>2.0.30</version>
 		</dependency>
 	</dependencies>
 
