--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 spring.application.name=ask
-gemini.api.key=YOUR_KEY_HERE
+gemini.api.key=AIzaSyDtvuuwyBcOQVXeUCIhHbZgdQXdsRhXAiQ
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
