feat: implement secure delete orbit and externalize secrets

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,24 @@
 spring.application.name=ask
-gemini.api.key=AIzaSyDtvuuwyBcOQVXeUCIhHbZgdQXdsRhXAiQ
+gemini.api.key=${GEMINI_API_KEY}
 gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash:generateContent
+
+# --- External Config ---
+# Import secrets from env.properties (ignored by git)
+spring.config.import=optional:classpath:env.properties
+
+# --- Database Configuration (Neon) ---
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# --- HikariCP Connection Pool (Fix for Neon/Postgres drops) ---
+spring.datasource.hikari.max-lifetime=600000
+spring.datasource.hikari.connection-timeout=30000
+spring.datasource.hikari.minimum-idle=0
+spring.datasource.hikari.idle-timeout=300000
+
+# --- Clerk Security (Backend Trust) ---
+# This ensures only valid tokens from your frontend are accepted
+spring.security.oauth2.resourceserver.jwt.issuer-uri=${CLERK_ISSUER_URI}
